Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -788,7 +788,7 @@ box-shadow: 0 4px 15px rgba(125, 42, 232, 0.4);
                         <span class="event-tag">Completed...</span>
                         <span style="float: right; color: #888; font-size: 0.8rem;">Jan 31st 2026</span>
                         <h3>What Ai Engineers Actually do..</h3>
-                        <p style="color: #aaa; margin: 10px 0; font-size: 0.9rem;">Required: 3 Opening Acts, 2 Hosts. Open to all registered musicians.</p>
+                        <p style="color: #aaa; margin: 10px 0; font-size: 0.9rem;">Students and industry expert intraction program what actually AI DO.</p>
                         <a href="#" style="color: var(--accent); font-weight: 600; font-size: 0.9rem;">View Details &rarr;</a>
                     </div>
                 </div>
@@ -800,7 +800,7 @@ box-shadow: 0 4px 15px rgba(125, 42, 232, 0.4);
                         <span class="event-tag">Upcoming...</span>
                         <span style="float: right; color: #888; font-size: 0.8rem;">Feb 14 2026</span>
                         <h3>Agentic AI X Data analytics</h3>
-                        <p style="color: #aaa; margin: 10px 0; font-size: 0.9rem;">Required: 3 Opening Acts, 2 Hosts. Open to all registered musicians.</p>
+                        <p style="color: #aaa; margin: 10px 0; font-size: 0.9rem;">Students and industry expert intraction program what actually AI DO.</p>
                         <a href="#" style="color: var(--accent); font-weight: 600; font-size: 0.9rem;">View Details &rarr;</a>
                     </div>
                 </div>
@@ -1128,4 +1128,5 @@ box-shadow: 0 4px 15px rgba(125, 42, 232, 0.4);
         reveal();
     </script>
 </body>
+
 </html>
